# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# dslm_extension_dfx object
ohos_source_set("dslm_extension_dfx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    blocklist = "../../cfi_blocklist.txt"
  }
  stack_protector_ret = true

  sources = [
    "dslm_bigdata.cpp",
    "dslm_hidumper.c",
    "dslm_hitrace.cpp",
  ]

  include_dirs = [
    "../../common/include",
    "../../services/include",
    "../../interfaces/inner_api/include",
    "../../services/dslm",
  ]

  deps = [ "../../baselib/utils:utils_static" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]

  configs = [ "../../common:common_configs" ]

  part_name = "device_security_level"
  subsystem_name = "security"
}
