# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# service_msg object
ohos_source_set("service_msg_obj") {
  sources = [ "dslm_messenger_wrapper.c" ]

  include_dirs = [
    "../../interfaces/inner_api/include",
    "../include",
  ]

  deps = [
    "../../baselib/msglib:messenger_static",
    "../../baselib/utils:utils_static",
  ]

  if (defined(ohos_lite)) {
    deps += [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
  } else {
    sanitize = {
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      cfi = true
      cfi_cross_dso = true
      blocklist = "../../cfi_blocklist.txt"
    }
    stack_protector_ret = true

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }

  configs = [ "../../common:common_configs" ]

  part_name = "device_security_level"
  subsystem_name = "security"
}
