# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/device_security_level/common/dslm.gni")
import("//build/ohos.gni")

ohos_source_set("dslm_ohos_cred_obj") {
  sources = [
    "../common/dslm_ohos_request.c",
    "../common/dslm_ohos_verify.c",
    "../common/external_interface_adapter.c",
    "../common/hks_adapter.c",
    "dslm_ohos_credential.c",
    "impl/dslm_ohos_init.c",
  ]

  include_dirs = [
    "impl",
    "../common",
    "../../common",
    "../../include",
    "../../../common/include",
    "../../../interfaces/inner_api/include",
    "../../../services/include",
  ]

  deps = [
    "../../../baselib/utils:utils_static",
    "../../common:oem_common_obj",
    "//base/security/huks/interfaces/inner_api/huks_lite:huks_3.0_sdk",
  ]

  if (ohos_kernel_type == "linux" || ohos_kernel_type == "liteos_a") {
    deps += [ "$dslm_hilog_path/featured:hilog_shared" ]
  } else if (ohos_kernel_type == "liteos_m") {
    deps += [ "$dslm_hilog_path/featured:hilog_static" ]
  }

  external_deps = [ "device_auth:deviceauth_sdk" ]

  configs = [
    "../../../common:common_configs",
    "../../../common:common_lite_configs",
  ]

  part_name = "device_security_level"
  subsystem_name = "security"
}

copy("dslm_ohos_cred_file") {
  sources = [ "dslm_finger.cfg" ]
  outputs = [ "$root_out_dir/system/etc/dslm_finger.cfg" ]
}
