# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
if (os_level == "standard") {
  ohos_fuzztest("DslmFuzzTest") {
    module_out_path = "device_security_level/device_security_level"
    fuzz_config_file = "../dslm_fuzzer"

    cflags = [
      "-g",
      "-O0",
      "-Wno-unused-variable",
      "-fno-omit-frame-pointer",
    ]

    include_dirs = [
      "../../../baselib/utils/include",
      "../../../baselib/msglib/include",
      "../../../baselib/msglib/src/utils",
      "../../../baselib/msglib/src/common",
      "../../../baselib/msglib/src/standard",
      "../../../common/include",
      "../../../interfaces/inner_api/src/standard",
      "../../../oem_property/include",
      "../../../oem_property/ohos/common",
      "../../../oem_property/ohos/standard",
      "../../../oem_property/ohos/standard/impl",
      "../../../services/sa/common",
      "../../../services/sa/standard",
      "../../../services/include",
      "../../../services/dslm",
      "../mock",
    ]

    sources = [
      "../../../baselib/msglib/src/common/messenger.c",
      "../../../baselib/msglib/src/standard/messenger_device_socket_manager.c",
      "../../../baselib/msglib/src/standard/messenger_device_status_manager.cpp",
      "../../../baselib/msglib/src/standard/messenger_impl.c",
      "../../../services/sa/common/dslm_rpc_process.c",
      "../../../services/sa/standard/dslm_callback_proxy.cpp",
      "../../../services/sa/standard/dslm_ipc_process.cpp",
      "../../../services/sa/standard/dslm_service.cpp",
      "../mock/mock.cpp",
      "dslm_fuzzer.cpp",
    ]

    deps = [
      "../../../baselib/utils:utils_static",
      "../../../oem_property:dslm_oem_ext",
      "../../../services/common:service_common_obj",
      "../../../services/dfx:dslm_extension_dfx",
      "../../../services/dslm:service_dslm_obj",
      "../../../services/msg:service_msg_obj",
    ]

    external_deps = [
      "c_utils:utils",
      "device_manager:devicemanagersdk",
      "device_security_level:dslm_sdk",
      "dsoftbus:softbus_client",
      "hilog:libhilog",
      "huks:libhukssdk",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
      "samgr:samgr_proxy",
    ]
  }
}
